--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </script> -->
   </head>
 <body>
-<h1 class="weare"><span data-aos="fade-up" data-aos-delay="200">We are<br>Communicating<br>Architecture</span></h1>
+<h1 class="weare"><span adata-aos="fade-up">We are<br>Communicating<br>Architecture</span></h1>
 <div class="notpace">
 <header class="banner" data-sticky-container>
     <div class="banner__top" adata-sticky adata-sticky-on="small" adata-options="marginTop:0;">
