--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <figure data-title="Sunset boulevard" data-description="Helen &amp; Hard">
                     <a href="#"><img width="2560" height="1812" src="assets/img/slides/sample_01.jpg" alt=""></a>
                     <figcaption>
-                        Ha nem infinite akkor a kettesről kell indítani<em>hogy bal oldalon legyen valami belógó </em>
+                        Ha nem infinite akkor a nem indítható az elejéről<em>hogy bal oldalon legyen valami belógó </em>
                     </figcaption>
                 </figure>
             </div>
@@ -95,9 +95,6 @@
                 </aside>
                 <figure data-title="Filmesgyakornok program" data-description="Filmalap">
                     <a href="#"><img width="2560" height="1707" src="assets/img/slides/sample_02.jpg" alt=""></a>
-                    <figcaption>
-                        Varius blandit sit amet<em>Risus varius blandit sit amet non magna</em>
-                    </figcaption>
                 </figure>
             </div>
         </div>
@@ -165,7 +162,7 @@
             <div class="citem">
                 <aside class="ipanel">
                     <header class="ipanel__header">
-                        <h3>Lorem Sit amet lorem ipsum</h3>
+                        <h3>Start sit amet lorem ipsum</h3>
                         <p>2020</p>
                     </header>
                     <div class="ipanel__details">
@@ -175,8 +172,11 @@
                         <p>Echo ipsum</p>
                     </div>
                 </aside>
-                <figure data-title="Lorem Sit amet lorem ipsum" data-description="Echo ipsum">
+                <figure data-title="Start sit amet lorem ipsum" data-description="Echo ipsum">
                     <a href="#"><img width="2000" height="1081" src="assets/img/slides/sample_06.jpg" alt=""></a>
+                    <figcaption>
+                        Innen indul<em>Blandit sit amet non magna</em>
+                    </figcaption>
                 </figure>
             </div>
         </div>
@@ -370,7 +370,7 @@
                 <figure data-title="Sunset boulevard" data-description="Helen &amp; Hard">
                     <a href="#"><img width="2560" height="1812" src="assets/img/slides/sample_01.jpg" alt=""></a>
                     <figcaption>
-                        Ha nem infinite akkor a kettesről kell indítani<em>hogy bal oldalon legyen valami belógó </em>
+                        Ha nem infinite akkor a nem indítható az elejéről<em>hogy bal oldalon legyen valami belógó </em>
                     </figcaption>
                 </figure>
                 <aside class="ipanel">
@@ -391,9 +391,6 @@
             <div class="slidecard">
                 <figure data-title="Filmesgyakornok program" data-description="Filmalap">
                     <a href="#"><img width="2560" height="1707" src="assets/img/slides/sample_02.jpg" alt=""></a>
-                    <figcaption>
-                        Varius blandit sit amet<em>Risus varius blandit sit amet non magna</em>
-                    </figcaption>
                 </figure>
                 <aside class="ipanel">
                     <header class="ipanel__header">
@@ -471,12 +468,15 @@
         </li>
         <li>
             <div class="slidecard">
-                <figure data-title="Lorem Sit amet lorem ipsum" data-description="Echo ipsum">
+                <figure data-title="Start sit amet lorem ipsum" data-description="Echo ipsum">
                     <a href="#"><img width="2000" height="1081" src="assets/img/slides/sample_06.jpg" alt=""></a>
+                    <figcaption>
+                        Innen indul<em>Blandit sit amet non magna</em>
+                    </figcaption>
                 </figure>
                 <aside class="ipanel">
                     <header class="ipanel__header">
-                        <h3>Lorem Sit amet lorem ipsum</h3>
+                        <h3>Start sit amet lorem ipsum</h3>
                         <p>2020</p>
                     </header>
                     <div class="ipanel__details">
