--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
                 </aside>
                 <figure data-title="Filmesgyakornok program" data-description="Filmalap">
                     <a href="#"><img width="2560" height="1707" src="assets/img/slides/sample_02.jpg" alt=""></a>
+                    <figcaption>
+                        Minimum innen induljon<em>Blandit sit amet non magna</em>
+                    </figcaption>
                 </figure>
             </div>
         </div>
@@ -175,7 +178,7 @@
                 <figure data-title="Start sit amet lorem ipsum" data-description="Echo ipsum">
                     <a href="#"><img width="2000" height="1081" src="assets/img/slides/sample_06.jpg" alt=""></a>
                     <figcaption>
-                        Innen indul<em>Blandit sit amet non magna</em>
+                        Innen is indulhat<em>Blandit sit amet non magna</em>
                     </figcaption>
                 </figure>
             </div>
@@ -391,6 +394,9 @@
             <div class="slidecard">
                 <figure data-title="Filmesgyakornok program" data-description="Filmalap">
                     <a href="#"><img width="2560" height="1707" src="assets/img/slides/sample_02.jpg" alt=""></a>
+                    <figcaption>
+                        Minimum innen induljon<em>Blandit sit amet non magna</em>
+                    </figcaption>
                 </figure>
                 <aside class="ipanel">
                     <header class="ipanel__header">
@@ -471,7 +477,7 @@
                 <figure data-title="Start sit amet lorem ipsum" data-description="Echo ipsum">
                     <a href="#"><img width="2000" height="1081" src="assets/img/slides/sample_06.jpg" alt=""></a>
                     <figcaption>
-                        Innen indul<em>Blandit sit amet non magna</em>
+                        Innen is indulhat<em>Blandit sit amet non magna</em>
                     </figcaption>
                 </figure>
                 <aside class="ipanel">
@@ -591,14 +597,13 @@
 <footer class="sitefooter" role="contentinfo">
     <div class="grid-container ">
         <div class="grid-x grid-margin-x">
-            <div class="cell sitefooter__separator"></div>
-            <div class="cell small-12 large-shrink text-center large-text-left">
+            <div class="cell small-12 tablet-shrink text-center tablet-text-left">
                 <p>
                     &copy; 2012-2019 Brick Visual Solutions Zrt. All Rights Reserved.
                     <a href="#">Privacy Policy</a>
                 </p>
             </div>
-            <div class="cell small-12 large-auto text-center large-text-right fcopy">
+            <div class="cell small-12 tablet-auto text-center tablet-text-right fcopy">
                 <ul class="sitefooter__social">
                     <li>
                         <a target="_blank" href="https://www.youtube.com/user/BrickVisualMedia">
