--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
   </head>
 <body>
 <h1 class="weare"><span adata-aos="fade-up">We are<br>Communicating<br>Architecture</span></h1>
-<div class="notpace">
-<header class="banner" data-sticky-container>
-    <div class="banner__top" adata-sticky adata-sticky-on="small" adata-options="marginTop:0;">
-        <div class="grid-container" data-aos="fade-down" adata-aos-delay="200">
+<!-- <div class="notpace"> -->
+<header class="banner paceshow" data-sticky-container>
+    <div class="banner__top" data-sticky data-sticky-on="small" data-options="marginTop:0;">
+        <div class="grid-container" data-aos="fade-down" data-aos-delay="200">
             <div class="grid-x grid-margin-x align-middle">
                 <div class="auto cell">
                     <div class="banner__branding">
@@ -54,7 +54,7 @@
             </div>
         </div>
     </div>
-</header><div class="fordesktoponly show-for-tablet">
+</header><div class="fordesktoponly show-for-tablet paceshow">
 <section class="carouselcontainer grid-container">
     <div class="homecarousel slick-slider">
         <div>
@@ -366,12 +366,12 @@
         </div>
 </div>
 </div>
-<div class="formobileonly hide-for-tablet">
-    <ul class="slides">
+<div class="formobileonly hide-for-tablet paceshow">
+    <ul class="slides" data-magellan>
         <li>
-            <div class="slidecard">
+            <div class="slidecard" id="slidecard-1" data-magellan-target="slidecard-1">
                 <figure data-title="Sunset boulevard" data-description="Helen &amp; Hard">
-                    <a href="#"><img width="2560" height="1812" src="assets/img/slides/sample_01.jpg" alt=""></a>
+                    <a href="#slidecard-1"><img width="2560" height="1812" src="assets/img/slides/sample_01.jpg" alt=""></a>
                     <figcaption>
                         Ha nem infinite akkor a nem indítható az elejéről<em>hogy bal oldalon legyen valami belógó </em>
                     </figcaption>
@@ -391,9 +391,9 @@
             </div>
         </li>
         <li>
-            <div class="slidecard">
+            <div class="slidecard" id="slidecard-2" data-magellan-target="slidecard-2">
                 <figure data-title="Filmesgyakornok program" data-description="Filmalap">
-                    <a href="#"><img width="2560" height="1707" src="assets/img/slides/sample_02.jpg" alt=""></a>
+                    <a href="#slidecard-2"><img width="2560" height="1707" src="assets/img/slides/sample_02.jpg" alt=""></a>
                     <figcaption>
                         Minimum innen induljon<em>Blandit sit amet non magna</em>
                     </figcaption>
@@ -413,9 +413,9 @@
             </div>
         </li>
         <li>
-            <div class="slidecard">
+            <div class="slidecard" id="slidecard-3" data-magellan-target="slidecard-3">
                 <figure data-title="Dolor sit amet lorem ipsum" data-description="Lorem visszhang">
-                    <a href="#"><img width="5120" height="2751" src="assets/img/slides/sample_03.jpg" alt=""></a>
+                    <a href="#slidecard-3"><img width="5120" height="2751" src="assets/img/slides/sample_03.jpg" alt=""></a>
                 </figure>
                 <aside class="ipanel">
                     <header class="ipanel__header">
@@ -432,9 +432,9 @@
             </div>
         </li>
         <li>
-            <div class="slidecard">
+            <div class="slidecard" id="slidecard-4" data-magellan-target="slidecard-4">
                 <figure data-title="Program Magyarországon" data-description="Filmalap">
-                    <a href="#"><img width="5120" height="2880" src="assets/img/slides/sample_04.jpg" alt=""></a>
+                    <a href="#slidecard-4"><img width="5120" height="2880" src="assets/img/slides/sample_04.jpg" alt=""></a>
                     <figcaption>
                         Eget risus varius blandit sit amet non magna
                     </figcaption>
@@ -454,9 +454,9 @@
             </div>
         </li>
         <li>
-            <div class="slidecard">
+            <div class="slidecard" id="slidecard-5" data-magellan-target="slidecard-5">
                 <figure data-title="Sit amet lorem ipsum" data-description="Sanyi ipsum">
-                    <a href="#"><img width="5120" height="2880" src="assets/img/slides/sample_05.jpg" alt=""></a>
+                    <a href="#slidecard-5"><img width="5120" height="2880" src="assets/img/slides/sample_05.jpg" alt=""></a>
                 </figure>
                 <aside class="ipanel">
                     <header class="ipanel__header">
@@ -473,9 +473,9 @@
             </div>
         </li>
         <li>
-            <div class="slidecard">
+            <div class="slidecard" id="slidecard-6" data-magellan-target="slidecard-6">
                 <figure data-title="Start sit amet lorem ipsum" data-description="Echo ipsum">
-                    <a href="#"><img width="2000" height="1081" src="assets/img/slides/sample_06.jpg" alt=""></a>
+                    <a href="#slidecard-6"><img width="2000" height="1081" src="assets/img/slides/sample_06.jpg" alt=""></a>
                     <figcaption>
                         Innen is indulhat<em>Blandit sit amet non magna</em>
                     </figcaption>
@@ -495,9 +495,9 @@
             </div>
         </li>
         <li>
-            <div class="slidecard">
+            <div class="slidecard" id="slidecard-7" data-magellan-target="slidecard-7">
                 <figure data-title="Filmesgyakornok program" data-description="Filmalap">
-                    <a href="#"><img width="5120" height="5120" src="assets/img/slides/sample_07.jpg" alt=""></a>
+                    <a href="#slidecard-7"><img width="5120" height="5120" src="assets/img/slides/sample_07.jpg" alt=""></a>
                 </figure>
                 <aside class="ipanel">
                     <header class="ipanel__header">
@@ -514,9 +514,9 @@
             </div>
         </li>
         <li>
-            <div class="slidecard">
+            <div class="slidecard" id="slidecard-8" data-magellan-target="slidecard-8">
                 <figure data-title="Sit amet lorem ipsum" data-description="Lorem visszhang">
-                    <a href="#"><img width="5120" height="2750" src="assets/img/slides/sample_08.jpg" alt=""></a>
+                    <a href="#slidecard-8"><img width="5120" height="2750" src="assets/img/slides/sample_08.jpg" alt=""></a>
                 </figure>
                 <aside class="ipanel">
                     <header class="ipanel__header">
@@ -533,9 +533,9 @@
             </div>
         </li>
         <li>
-            <div class="slidecard">
+            <div class="slidecard" id="slidecard-9" data-magellan-target="slidecard-9">
                 <figure data-title="Program Magyarországon" data-description="Filmalap">
-                    <a href="#"><img width="5335" height="3001" src="assets/img/slides/sample_09.jpg" alt=""></a>
+                    <a href="#slidecard-9"><img width="5335" height="3001" src="assets/img/slides/sample_09.jpg" alt=""></a>
                 </figure>
                 <aside class="ipanel">
                     <header class="ipanel__header">
@@ -552,9 +552,9 @@
             </div>
         </li>
         <li>
-            <div class="slidecard">
+            <div class="slidecard" id="slidecard-10" data-magellan-target="slidecard-10">
                 <figure data-title="Sit amet lorem ipsum" data-description="Sanyi ipsum">
-                    <a href="#"><img width="2560" height="1863" src="assets/img/slides/sample_10.jpg" alt=""></a>
+                    <a href="#slidecard-10"><img width="2560" height="1863" src="assets/img/slides/sample_10.jpg" alt=""></a>
                 </figure>
                 <aside class="ipanel">
                     <header class="ipanel__header">
@@ -571,9 +571,9 @@
             </div>
         </li>
         <li>
-            <div class="slidecard">
+            <div class="slidecard" id="slidecard-11" data-magellan-target="slidecard-11">
                 <figure data-title="Lorem Sit amet lorem ipsum" data-description="Echo ipsum">
-                    <a href="#"><img width="2000" height="2000" src="assets/img/slides/sample_11.jpg" alt=""></a>
+                    <a href="#slidecard-11"><img width="2000" height="2000" src="assets/img/slides/sample_11.jpg" alt=""></a>
                 </figure>
                 <aside class="ipanel">
                     <header class="ipanel__header">
@@ -594,7 +594,7 @@
         </li>
     </ul>
 </div>
-<footer class="sitefooter" role="contentinfo">
+<footer class="sitefooter paceshow" role="contentinfo">
     <div class="grid-container ">
         <div class="grid-x grid-margin-x">
             <div class="cell small-12 tablet-shrink text-center tablet-text-left">
@@ -638,7 +638,7 @@
         </div>
     </div>
 </footer>
-</div>
+<!-- </div> -->
 <aside class="reveal mobilemodal" id="mobilemodal" data-reveal data-animation-in="scale-in-down fast" data-animation-out="scale-out-up fast">
     <div class="mobilemodal__inner">
         <nav class="mobilemodal__mainnav">
