--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
         <div>
             <div class="citem">
                 <figure data-title="The End" data-description="Click to see full portfolio">
-                    <a href="https://brickvisual.com/portfolio/"><img width="1000" height="1000" src="https://placehold.it/1000/ffffff/0a0a0a/?text=%2b" alt=""></a>
+                    <a href="https://brickvisual.com/portfolio/"><img width="1000" height="1000" src="assets/img/more.svg" alt=""></a>
                     <!-- <figcaption>
                         The End<em>Click to see full portfolio</em>
                     </figcaption> -->
@@ -361,7 +361,7 @@
         </div>
         <div>
             <figure>
-                <img width="1000" height="1000" src="https://placehold.it/1000x1000/3b3b3b/?text=?" alt="">
+                <img width="1000" height="1000" src="assets/img/more.svg" alt="">
             </figure>
         </div>
 </div>
