--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
         </div>
     </div>
-</header><div class="fordesktoponly show-for-tablet paceshow">
+</header><div class="fordesktoponly show-for-large paceshow">
 <section class="carouselcontainer grid-container">
     <div class="homecarousel slick-slider">
         <div>
@@ -278,23 +278,10 @@
                 </figure>
             </div>
         </div>
-        <!-- <div>
-            <div class="citem">
-                <figure data-title="The End" data-description="Click to see full portfolio">
-                    <a href="https://brickvisual.com/portfolio/"><img width="1000" height="1000" src="https://placehold.it/1000x1000/3b3b3b/?text=?" alt=""></a>
-                    <figcaption>
-                        The End<em>Click to see full portfolio</em>
-                    </figcaption>
-                </figure>
-            </div>
-        </div> -->
         <div>
             <div class="citem">
-                <figure data-title="The End" data-description="Click to see full portfolio">
-                    <a href="https://brickvisual.com/portfolio/"><img width="1000" height="1000" src="assets/img/more.svg" alt=""></a>
-                    <!-- <figcaption>
-                        The End<em>Click to see full portfolio</em>
-                    </figcaption> -->
+                <figure>
+                <a class="desktopportfoliojump" href="https://brickvisual.com/portfolio/">+ more works</a>
                 </figure>
             </div>
         </div>
@@ -366,7 +353,7 @@
         </div>
 </div>
 </div>
-<div class="formobileonly hide-for-tablet paceshow">
+<div class="formobileonly hide-for-large paceshow">
     <ul class="slides" data-magellan>
         <li>
             <div class="slidecard" id="slidecard-1" data-magellan-target="slidecard-1">
