--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </script> -->
   </head>
 <body>
-<h1 class="weare"><span adata-aos="fade-up">We are<br>Communicating<br>Architecture</span></h1>
+<h1 class="weare"><span data-aos-duration="600" data-aos="fade-up">We are<br>Communicating<br>Architecture</span></h1>
 <!-- <div class="notpace"> -->
 <header class="banner paceshow" data-sticky-container>
     <div class="banner__top" data-sticky data-sticky-on="small" data-options="marginTop:0;">
