--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         gtag("config", "UA-37753223-4");
     </script> -->
-    <script src="assets/js/loader.js"></script>
+    <!-- <script src="assets/js/loader.js"></script> -->
     
     <link rel="preload" href="assets/img/slides/01.jpg" as="image">
     
