--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html class="no-js" lang="en">
   <head>
@@ -13,8 +12,17 @@
     <link rel="stylesheet" href="https://use.typekit.net/qlw0hcu.css" />
     <link rel="icon" type="image/png" href="assets/img/favicon.png" />
     <meta name="theme-color" content="#25A7E0" />
+    <meta name="description" content="Brick Visual is a high-end architectural visualization company, delivering engaging architectural visualization still images, movies and AR/VR solutions." />
+	<meta name="robots" content="index, follow" />
+	<meta property="og:locale" content="en_US" />
+	<meta property="og:type" content="website" />
+	<meta property="og:title" content="Brick Visual - Communicating Architecture" />
+	<meta property="og:description" content="Brick Visual is a high-end architectural visualization company, delivering engaging architectural visualization still images, movies and AR/VR solutions." />
+	<meta property="og:url" content="https://brickvisual.com/" />
+    <meta property="og:site_name" content="Brick Visual" />
+    <meta property="og:image" content="https://brickvisual.com/assets/img/slides/01.jpg" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-37753223-4"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-37753223-4"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() {
@@ -23,7 +31,7 @@
         gtag("js", new Date());
 
         gtag("config", "UA-37753223-4");
-    </script> -->
+    </script>
     <script src="assets/js/loader.js"></script>
     
     <link rel="preload" href="assets/img/slides/19.jpg" as="image">
