--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                                     <img src="https://via.placeholder.com/1200x800/ffffff?text=Anthony Timberlands Center" alt="Anthony Timberlands Center">
                                 </a>
                         </div>
-                        <div class="rightstretched">
+                        <div class="rightinner">
                                     <a class="videolink" href="https://vimeo.com/540645744">    
                                         <img src="assets/img/slides/medium/02.jpg" alt="Lagmansgården School"
                                         srcset="assets/img/slides/02.jpg w">
@@ -89,7 +89,7 @@
                 </div>
                 <div class="citemwrap">
                     <div class="citem">
-                        <div class="leftstretched">
+                        <div class="leftstretched wide">
                                     <a href="#">
                                         <video muted loop preload poster="assets/img/slides/nordic.jpg">
                                             <source src="assets/img/slides/nordic.mp4" type="video/mp4">
@@ -97,7 +97,7 @@
                                         </video>
                                     </a>
                         </div>
-                        <div class="rightstretched">
+                        <div class="rightstretched narrow">
                                 <a href="#">
                                     <img src="https://via.placeholder.com/1200x800/ffffff?text=European Medicines Agency" alt="European Medicines Agency">
                                 </a>
@@ -106,13 +106,13 @@
                 </div>
                 <div class="citemwrap">
                     <div class="citem">
-                        <div class="rightinner">
+                        <div class="leftinner">
                                     <a href="#">    
                                         <img src="assets/img/slides/medium/07.jpg" alt="Anonymous Hotel Project"
                                         srcset="assets/img/slides/07.jpg w">
                                     </a>
                         </div>
-                        <div class="leftstretched">
+                        <div class="rightstretched">
                                 <a href="#">
                                     <img src="https://via.placeholder.com/1200x800/ffffff?text=550 West Randolph" alt="550 West Randolph">
                                 </a>
@@ -217,17 +217,16 @@
                 </div>
                 <div class="citemwrap">
                     <div class="citem">
-                        <div class="rightinner">
+                        <div class="rightinner wide">
                                     <a href="#">    
                                         <img src="assets/img/slides/medium/01.jpg" alt="citizenM Hotel"
                                         srcset="assets/img/slides/01.jpg w">
                                     </a>
                         </div>
-                        <div class="leftstretched">
-                                    <a href="#">    
-                                        <img src="assets/img/slides/medium/02.jpg" alt="Lagmansgården School"
-                                        srcset="assets/img/slides/02.jpg w">
-                                    </a>
+                        <div class="leftstretched narrow">
+                                <a href="#">
+                                    <img src="https://via.placeholder.com/1200x800/ffffff?text=Lagmansgården School" alt="Lagmansgården School">
+                                </a>
                         </div>
                     </div>
                 </div>
