--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </div>
                 </div>
                 <div class="auto cell show-for-tablet text-center">
-                    <h3 class="banner__title">Portfolio <span>2021</span></h3>
+                    <h3 class="banner__title"><a href="#" class="js-restartslideshow">Portfolio <span>2021</span></a></h3>
                 </div>
                 <div class="shrink cell">
                     <nav class="banner__nav">
@@ -349,7 +349,14 @@
                         </div>
                         <div class="citem__links">
                                     <a data-type="img" data-size="1600x999" href="https://via.placeholder.com/1600x999/5a5a5a" data-caption="Some custom caption goes here" class="left narrow"></a>
-                                    <a data-type="img" data-size="1200x800" href="https://via.placeholder.com/1200x800/9a9a9a" data-caption="Some custom caption goes here" class="right wide"></a>
+                                    <a 
+                                        data-type="loop"
+                                        data-size="1200x800"
+                                        data-loopvideo="<video class='cvidi' autoplay muted loop><source src='assets/img/loopsandposters/zaha.mp4' type='video/mp4'></video>"
+                                        href="assets/img/loopsandposters/zaha.mp4"
+                                        data-caption="Some custom caption goes here"
+                                        class="right wide">
+                                    </a>
                         </div>
                     </div>
                 </div>
