slide thumbs readded

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -68,14 +68,14 @@
         {{#each theslides}}
         <div>
             <figure>
-                <img src="{{root}}assets/img/slides/small/{{ slide }}" alt="{{ slide }}">
+                <img src="{{root}}assets/img/slides/thumbs/{{ slide }}">
             </figure>
         </div>
         {{/each}}
-        <div>
+        <!-- <div>
             <figure>
                 <img width="1000" height="1000" src="{{root}}assets/img/more.svg" alt="">
             </figure>
-        </div>
+        </div> -->
     </div>
 </div>
