--- a/index.html
+++ b/index.html
@@ -817,249 +817,249 @@
     <div class="navcarousel">
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_00.jpg" alt="slide_00.jpg">
+                <img src="assets/img/slides/thumbs/slide_00.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_01.jpg" alt="slide_01.jpg">
+                <img src="assets/img/slides/thumbs/slide_01.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_02.jpg" alt="slide_02.jpg">
+                <img src="assets/img/slides/thumbs/slide_02.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_03.jpg" alt="slide_03.jpg">
+                <img src="assets/img/slides/thumbs/slide_03.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_04.jpg" alt="slide_04.jpg">
+                <img src="assets/img/slides/thumbs/slide_04.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_05.jpg" alt="slide_05.jpg">
+                <img src="assets/img/slides/thumbs/slide_05.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_06.jpg" alt="slide_06.jpg">
+                <img src="assets/img/slides/thumbs/slide_06.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_07.jpg" alt="slide_07.jpg">
+                <img src="assets/img/slides/thumbs/slide_07.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_08.jpg" alt="slide_08.jpg">
+                <img src="assets/img/slides/thumbs/slide_08.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_09.jpg" alt="slide_09.jpg">
+                <img src="assets/img/slides/thumbs/slide_09.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_10.jpg" alt="slide_10.jpg">
+                <img src="assets/img/slides/thumbs/slide_10.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_11.jpg" alt="slide_11.jpg">
+                <img src="assets/img/slides/thumbs/slide_11.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_12.jpg" alt="slide_12.jpg">
+                <img src="assets/img/slides/thumbs/slide_12.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_13.jpg" alt="slide_13.jpg">
+                <img src="assets/img/slides/thumbs/slide_13.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_14.jpg" alt="slide_14.jpg">
+                <img src="assets/img/slides/thumbs/slide_14.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_15.jpg" alt="slide_15.jpg">
+                <img src="assets/img/slides/thumbs/slide_15.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_16.jpg" alt="slide_16.jpg">
+                <img src="assets/img/slides/thumbs/slide_16.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_17.jpg" alt="slide_17.jpg">
+                <img src="assets/img/slides/thumbs/slide_17.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_18.jpg" alt="slide_18.jpg">
+                <img src="assets/img/slides/thumbs/slide_18.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_19.jpg" alt="slide_19.jpg">
+                <img src="assets/img/slides/thumbs/slide_19.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_20.jpg" alt="slide_20.jpg">
+                <img src="assets/img/slides/thumbs/slide_20.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_21.jpg" alt="slide_21.jpg">
+                <img src="assets/img/slides/thumbs/slide_21.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_22.jpg" alt="slide_22.jpg">
+                <img src="assets/img/slides/thumbs/slide_22.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_23.jpg" alt="slide_23.jpg">
+                <img src="assets/img/slides/thumbs/slide_23.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_24.jpg" alt="slide_24.jpg">
+                <img src="assets/img/slides/thumbs/slide_24.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_25.jpg" alt="slide_25.jpg">
+                <img src="assets/img/slides/thumbs/slide_25.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_26.jpg" alt="slide_26.jpg">
+                <img src="assets/img/slides/thumbs/slide_26.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_27.jpg" alt="slide_27.jpg">
+                <img src="assets/img/slides/thumbs/slide_27.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_28.jpg" alt="slide_28.jpg">
+                <img src="assets/img/slides/thumbs/slide_28.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_29.jpg" alt="slide_29.jpg">
+                <img src="assets/img/slides/thumbs/slide_29.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_30.jpg" alt="slide_30.jpg">
+                <img src="assets/img/slides/thumbs/slide_30.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_31.jpg" alt="slide_31.jpg">
+                <img src="assets/img/slides/thumbs/slide_31.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_32.jpg" alt="slide_32.jpg">
+                <img src="assets/img/slides/thumbs/slide_32.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_33.jpg" alt="slide_33.jpg">
+                <img src="assets/img/slides/thumbs/slide_33.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_34.jpg" alt="slide_34.jpg">
+                <img src="assets/img/slides/thumbs/slide_34.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_35.jpg" alt="slide_35.jpg">
+                <img src="assets/img/slides/thumbs/slide_35.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_36.jpg" alt="slide_36.jpg">
+                <img src="assets/img/slides/thumbs/slide_36.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_37.jpg" alt="slide_37.jpg">
+                <img src="assets/img/slides/thumbs/slide_37.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_38.jpg" alt="slide_38.jpg">
+                <img src="assets/img/slides/thumbs/slide_38.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_39.jpg" alt="slide_39.jpg">
+                <img src="assets/img/slides/thumbs/slide_39.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_40.jpg" alt="slide_40.jpg">
+                <img src="assets/img/slides/thumbs/slide_40.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_41.jpg" alt="slide_41.jpg">
+                <img src="assets/img/slides/thumbs/slide_41.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_42.jpg" alt="slide_42.jpg">
+                <img src="assets/img/slides/thumbs/slide_42.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_43.jpg" alt="slide_43.jpg">
+                <img src="assets/img/slides/thumbs/slide_43.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_44.jpg" alt="slide_44.jpg">
+                <img src="assets/img/slides/thumbs/slide_44.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_45.jpg" alt="slide_45.jpg">
+                <img src="assets/img/slides/thumbs/slide_45.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_46.jpg" alt="slide_46.jpg">
+                <img src="assets/img/slides/thumbs/slide_46.jpg">
             </figure>
         </div>
         <div>
             <figure>
-                <img src="assets/img/slides/small/slide_47.jpg" alt="slide_47.jpg">
+                <img src="assets/img/slides/thumbs/slide_47.jpg">
             </figure>
         </div>
-        <div>
+        <!-- <div>
             <figure>
                 <img width="1000" height="1000" src="assets/img/more.svg" alt="">
             </figure>
-        </div>
+        </div> -->
     </div>
 </div>
 <footer class="sitefooter aaapaceshow" role="contentinfo">
