--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brick Visual - Communicating Architecture</title>
+    <title>Brick Visual - Portfolio 2021</title>
     <link rel="preload" href="assets/js/loader.js" as="script">
     <link rel="preload" href="assets/js/app.js" as="script">
     <link rel="preload" href="assets/css/app.css" as="style">
@@ -16,7 +16,7 @@
 	<meta name="robots" content="index, follow" />
 	<meta property="og:locale" content="en_US" />
 	<meta property="og:type" content="website" />
-	<meta property="og:title" content="Brick Visual - Communicating Architecture" />
+	<meta property="og:title" content="Brick Visual - Portfolio 2021" />
 	<meta property="og:description" content="Brick Visual is a high-end architectural visualization company, delivering engaging architectural visualization still images, movies and AR/VR solutions." />
 	<meta property="og:url" content="https://brickvisual.com/" />
     <meta property="og:site_name" content="Brick Visual" />
@@ -73,7 +73,9 @@
         </div>
     </div>
 </header>
-<div class="aaapaceshow">
+
+
+<div class="ccwrap">
     <div class="carouselwrap">
         <button type="button" class="slick-arrow slick-prev"><svg class="icon">
                 <use xlink:href="#icon-caret-left"></use>
@@ -812,256 +814,259 @@
             </svg>
         </button>
         <div class="carouselstatus"></div>
+        <div class="navcarousel">
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_00.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_01.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_02.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_03.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_04.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_05.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_06.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_07.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_08.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_09.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_10.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_11.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_12.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_13.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_14.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_15.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_16.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_17.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_18.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_19.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_20.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_21.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_22.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_23.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_24.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_25.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_26.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_27.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_28.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_29.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_30.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_31.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_32.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_33.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_34.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_35.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_36.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_37.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_38.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_39.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_40.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_41.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_42.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_43.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_44.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_45.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_46.jpg">
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="assets/img/slides/thumbs/slide_47.jpg">
+                </figure>
+            </div>
+            <!-- <div>
+                <figure>
+                    <img width="1000" height="1000" src="assets/img/more.svg" alt="">
+                </figure>
+            </div> -->
+        </div>
     </div>
     
-    <div class="navcarousel">
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_00.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_01.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_02.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_03.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_04.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_05.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_06.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_07.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_08.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_09.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_10.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_11.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_12.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_13.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_14.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_15.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_16.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_17.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_18.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_19.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_20.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_21.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_22.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_23.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_24.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_25.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_26.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_27.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_28.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_29.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_30.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_31.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_32.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_33.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_34.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_35.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_36.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_37.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_38.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_39.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_40.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_41.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_42.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_43.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_44.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_45.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_46.jpg">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img src="assets/img/slides/thumbs/slide_47.jpg">
-            </figure>
-        </div>
-        <!-- <div>
-            <figure>
-                <img width="1000" height="1000" src="assets/img/more.svg" alt="">
-            </figure>
-        </div> -->
-    </div>
+
 </div>
+
+
 <footer class="sitefooter aaapaceshow" role="contentinfo">
     <div class="grid-container ">
         <div class="grid-x grid-margin-x align-middle">
