--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <header class="banner aaapaceshow" data-sticky-container>
     <div class="banner__top" data-sticky data-sticky-on="small" data-options="marginTop:0;">
         <div class="grid-container" data-aos="fade-down" data-aos-delay="200">
-            <div class="grid-x grid-margin-x align-middle align-justify">
+            <div class="banner__toprow grid-x grid-margin-x align-middle align-justify">
                 <div class="shrink cell">
                     <div class="banner__branding">
                         <a class="brand" href="">
@@ -1111,7 +1111,7 @@
 
 <footer class="sitefooter aaapaceshow" role="contentinfo">
     <div class="grid-container ">
-        <div class="grid-x grid-margin-x align-middle">
+        <div class="sitefooter__row grid-x grid-margin-x align-middle">
             <div class="cell small-12 tablet-shrink text-center tablet-text-left">
                 <p>
                     &copy; 2012-2021 Brick Visual Solutions Zrt. All Rights Reserved.
